# mcp-macos-calendar

./: .gitignore  COVERAGE.md  Cargo.toml  Info.plist  LICENSE  README.md  build.rs  justfile
scripts/: coverage.sh
specs/done/: spec-01-project-setup.md  spec-02-eventkit-bridge.md  spec-03-data-models.md  spec-04-mcp-server-handler.md  spec-05-calendar-event-services.md  spec-06-mcp-tools-definition.md  spec-07-error-handling-logging-integration.md  spec-08-read-only-mode.md  spec-09-getCalendarEvents-date-filter.md  spec-10-default-calendar-selection.md
specs/todo/: spec-01-project-setup.md  spec-02-eventkit-bridge.md  spec-03-data-models.md  spec-04-mcp-server-handler.md  spec-05-calendar-event-services.md  spec-06-mcp-tools-definition.md  spec-07-error-handling-logging-integration.md
src/: config.rs  error.rs  main.rs  models.rs  server.rs  sse_transport.rs
src/bridge/: eventkit.rs  mod.rs
src/services/: calendar_service.rs  event_service.rs  mod.rs
src/tools/: calendar.rs  event.rs  mod.rs
tests/: integration_main.rs
