[package]
name = "mcp-macos-calendar"
version = "0.1.0"
edition = "2021"
description = "MCP server for macOS Calendar access via EventKit"
rust-version = "1.80"

[dependencies]
# MCP SDK
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
    "tower",
] }

# Objective-C runtime and EventKit bindings
objc2 = "0.6"
objc2-event-kit = "0.3"
objc2-foundation = { version = "0.3", features = ["NSRunLoop"] }
objc2-core-graphics = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
block2 = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# JSON Schema (for rmcp tool parameter derive)
schemars = "1.0"

# HTTP server (for SSE and Streamable HTTP transport)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Async utilities
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"

# UUID generation (for SSE session IDs)
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[[bin]]
name = "mcp-macos-calendar"
path = "src/main.rs"
